2005-10-13  Roger While <simrw@sim-basis.de>

	* configure.ac : Use basename for gcc

2005-10-06  Roger While <simrw@sim-basis.de>

	* README : Typo for Bison

2005-10-01  Roger While <simrw@sim-basis.de>

	* cpucheck.c : Some versions of GCC generate wrong SSE code
	  when compiling with P3/4 options. Stop this by also
	  specifying -mno-sse.

2005-07-31  Roger While <simrw@sim-basis.de>

	* Change configure default options for db, lfs64, ltdl
	  Add --with-patch-level=<n>
	* Add cpucheck.c to top level for configure

2005-06-28  Roger While <simrw@sim-basis.de>

	* Finally FUNCTIONS

2005-06-13  Roger While <simrw@sim-basis.de>

	* If ncurses not found, check for pdcurses

2005-06-11  Roger While <simrw@sim-basis.de>

	* New m4 macro cattribute.m4, autoreconf run

2005-06-01  Roger While <simrw@sim-basis.de>

	* configure.ac, configure : Change for MingW

2005-05-27  Roger While <simrw@sim-basis.de>

	* DB headers can also be in db4/ db4.1/ db4.2/ db4.3/

2005-05-21  Roger While <simrw@sim-basis.de>

	* Allow configure option --with-dl for native dynamic
	  linking instead of ltdl. This is a win eg. on Linux
	  as native dl is anyway used.

2005-05-17  Roger While <simrw@sim-basis.de>

	* configure, configure.ac, all Makefile.in
	  Fix up COB_CFLAGS and COB_LIBS.
	  Cater for defining CPPFLAGS and LDFLAGS.
	  We have to propogate these to the compiler.

2005-05-13  Roger While <simrw@sim-basis.de>

	* CVS Version bumped to 0.33

2005-05-12  Roger While <simrw@sim-basis.de>

	* Version 0.32 released

2005-05-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Revert WORDS_BIGENDIAN. We do not need it.
	  configure.ac, configure, Mak** : Fix missing variables.
	  Run autoreconf

2005-04-15  Keisuke Nishida  <knishida@open-cobol.org>

	* configure.ac (WORDS_BIGENDIAN): New variable.

2005-04-13  Keisuke Nishida  <knishida@open-cobol.org>

	* configure.ac (LIBCOB_CFLAGS): Set -fPIC when necessary.

2005-03-03  Roger While <simrw@sim-basis.de>
