@@ -43,4 +43,4 @@ CB_FLAG (cb_flag_line_directive, "line-directive",
 	 N_("Include line directive in the output"))
 
 CB_FLAG (cb_flag_runtime_inlining, "runtime-inlining",
-	 N_("Inline runtime functions in the most common cases"))
+	 N_("Inline runtime functions (deprecated)"))
