@@ -269,7 +269,8 @@ then
 	CFLAGS=`echo $CFLAGS | sed -e 's/-g //'`
 	if test "`basename $COB_CC`" = "gcc"
 	then
-		cob_temp_flags="`gcc cpucheck.c -o cpucheck 1>/dev/null 2>&1 && ./cpucheck 2>/dev/null`"
+		cob_temp_flags="`gcc ${srcdir}/cpucheck.c -o cpucheck 1>/dev/null 2>&1 && ./cpucheck 2>/dev/null`"
+		rm -f cpucheck
 		CFLAGS="$CFLAGS $cob_temp_flags -finline-functions -finline-limit=1200 -fomit-frame-pointer"
 		COB_CFLAGS="$COB_CFLAGS $cob_temp_flags"
 	fi
