@@ -1,6 +1,8 @@
 2005-10-14  Roger While <simrw@sim-basis.de>
 
 	* All : More GCC 4 fixes
+	* typeck.c : Take out last references to cb_runtime_inlining
+	* flag.def : Mark -fruntime_inlining as deprecated in help text
 
 2005-10-13  Roger While <simrw@sim-basis.de>
 
