@@ -1,3 +1,7 @@
+2005-10-14  Roger While <simrw@sim-basis.de>
+
+	* Fix a typo
+
 2005-10-13  Roger While <simrw@sim-basis.de>
 
 	* Fix various tests for GCC 4
