@@ -1,3 +1,7 @@
+2005-10-14  Roger While <simrw@sim-basis.de>
+
+	* configure.ac : Specify srcdir for cpucheck (make distcheck)
+
 2005-10-13  Roger While <simrw@sim-basis.de>
 
 	* configure.ac : Use basename for gcc
